crates/dsrs-macros/tests/ui/output_unknown_arg.stderr
error: unsupported arguments for #[output(...)]; only desc = "..." is allowed
 --> tests/ui/output_unknown_arg.rs:8:5
  |
8 |     #[output(bad = "x")]
  |     ^^^^^^^^^^^^^^^^^^^^
