crates/dsrs-macros/tests/ui/output_unknown_arg.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct OutputUnknownArg {
    #[input]
    question: String,

    #[output(bad = "x")]
    answer: String,
}

fn main() {}
